--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    </body>
+    <div id="modal-hook"></div>
+    <div id="backdrop-hook"></div>
+  </body>
 </html>
